--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p><b>Yourpet.</b></p>
+
     <div class="navbars">
+        <span><b>Yourpet.</b></span>
         <span>Home</span>
         <span>Services</span>
         <span>Doctors</span>
@@ -41,8 +42,8 @@
         <h2><b>Which services do we?</b></h2>
         </div>
         <div>
-        <p>We are at your service with all our services</p>
-        <p>and personalities you need.</p>
+        <p>We are at your service with all </p>
+        <p> our services and personalities you need.</p>
         </div>
     </div>
     <div class="services1">
@@ -178,17 +179,17 @@
     </div>
     <div class="doctors">
         <div>
-            <img src="./Images/image2.jpeg">
+            <img src="./Images/image2.jpeg" class="photo">
             <p><b>Dr.Nell Human Pascal</b></p>
             <p>Expert veterinarian</p>
         </div>
         <div>
-            <img src="./Images/image4.jpeg">
+            <img src="./Images/image4.jpeg" class="pics">
             <p><b>Dr. Patric Samuel Neal</b></p>
             <p>Expert veterinarian</p>
         </div>
         <div>
-            <img src="./Images/image3.jpeg">
+         <img src="./Images/image3.jpeg" class="photo">
             <p><b>Dr. Emanuella Belivea</b></p>
             <p>Expert veterinarian</p>
 
